# Qt_Cmake_MySQL

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
output/: t.csv
